feat(all): add code relate to updateVote and updateView of question